# PythonCourseProject

./: .pre-commit-config.yaml  pyproject.toml
10week/: task1.py  task2.py  task3.py  task4.py  task5.py
1week/: task1.py  task2,py  task3.py  task4.py  task5.py
2week/: task1.py  task2.py  task3.py  task4.py  task5.py
3week/: task1.py  task2.py  task3.py  task4.py  task5.py
4week/: task1.py  task2.py  task3.py  task4.py  task5.py
5week/: task1.py  task2.py  task3.py  task4.py  task5.py
6week/: task1.py  task2.py  task3.py  task4.py  task5.py
7week/: task1.py  task2.py  task3.py  task4.py  task5.py
8week/: task1.py  task2.py  task3.py  task4.py  task5.py
9week/: task1.py  task2.py  task3.py  task4.py  task5.py
